added error message in front end  when book is not available

--- a/public/styles.css
+++ b/public/styles.css
@@ -160,3 +160,9 @@ footer {
   margin-top: 120px;
   color: #aaa;
 }
+
+.no_book {
+  display: block;
+  text-align: center;
+  margin-top: 4rem;
+}
