--- a/views/adminBook.ejs
+++ b/views/adminBook.ejs
@@ -2,21 +2,29 @@
 
   <h2><%= title %></h2>
 
-  <ul class="books">
-    <% books.forEach(ele =>{ %>
+  <% if(books.length <= 0) { %>
+    <h1 class="no_book"><%= notAvailableTitle %> </h1>
+    <% } else{ %>
 
-    <li class="book">
-      <img src="/book.jpg" alt="Book icon" />
-      <h4><%= ele.name %></h4>
-      <p><%= ele.description %></p>
-      <% if(remove) { %>
-      <a href="/admin/remove-book/ <%= ele._id %> " class="get-now">Remove</a>
+      <ul class="books">
+        <% books.forEach(ele =>{ %>
+    
+        <li class="book">
+          <img src="/book.jpg" alt="Book icon" />
+          <h4><%= ele.name %></h4>
+          <p><%= ele.description %></p>
+          <% if(remove) { %>
+          <a href="/admin/remove-book/ <%= ele._id %> " class="get-now">Remove</a>
+    
+          <% } %>
+        </li>
+    
+        <% }) %>
+      </ul>
 
-      <% } %>
-    </li>
+    <% } %> 
 
-    <% }) %>
-  </ul>
+  
 
   <%- include('partials/footer'); -%>
 </html>
