--- a/views/books.ejs
+++ b/views/books.ejs
@@ -1,4 +1,7 @@
-<%- include('partials/header'); -%>
+<%- include('partials/header'); -%> <% if(books.length <= 0) { %>
+<h1 class="no_book">No book available now</h1>
+<% } else{ %>
+
 <ul class="books">
   <% books.forEach((ele) =>{ %>
 
@@ -12,4 +15,4 @@
   <% }) %>
 </ul>
 
-<%- include('partials/footer'); -%>
+<% } %> <%- include('partials/footer'); -%>
