--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,7 +1,7 @@
 <%- include('partials/header'); -%>
 
 <header>
-  <div class="smoothie">
+  <div class="home-img">
     <img src="/book.jpg" alt="" />
   </div>
   <div class="headings">
