css pointer add for button

--- a/views/adminAddBook.ejs
+++ b/views/adminAddBook.ejs
@@ -10,7 +10,7 @@
     <label for="description">description</label>
     <input type="text" name="description" required />
     <div class="error description"></div>
-    <button>Add Book</button>
+    <button class="cursor-pointer">Add Book</button>
   </form>
 
 
