--- a/views/login.ejs
+++ b/views/login.ejs
@@ -9,7 +9,7 @@
   <label for="password">Password</label>
   <input type="password" name="password" required />
   <div class="error password"></div>
-  <button>Log in</button>
+  <button class="cursor-pointer">Log in</button>
 </form>
 
 <script>
